--- a/Car Parts/Car Parts/Car Parts.csproj
+++ b/Car Parts/Car Parts/Car Parts.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Constraints\" />
+  </ItemGroup>
+
 </Project>
