--- a/Car Parts/Car Parts/Car Parts.csproj
+++ b/Car Parts/Car Parts/Car Parts.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Parts\AddPart.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.7" />
@@ -18,6 +22,10 @@
 
   <ItemGroup>
     <Folder Include="Data\Constraints\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Views\Parts\AddPart.cshtml" />
   </ItemGroup>
 
 </Project>
