Added Info about parts you are about to purchase

--- a/Car Parts/Car Parts/appsettings.json
+++ b/Car Parts/Car Parts/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CarParts;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-N4VNP4E\\SQLEXPRESS01;Database=CarParts;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
