--- a/Car Parts/Car Parts/Car Parts.csproj
+++ b/Car Parts/Car Parts/Car Parts.csproj
@@ -24,4 +24,8 @@
     <None Include="Views\Parts\AddPart.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\Parts\" />
+  </ItemGroup>
+
 </Project>
