--- a/Car Parts/Car Parts/Car Parts.csproj
+++ b/Car Parts/Car Parts/Car Parts.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Services\Parts\" />
+    <Folder Include="Services\Shop\" />
   </ItemGroup>
 
 </Project>
