Tried to add Tests to the project

--- a/Car Parts/Car Parts.Tests/Car Parts.Tests.csproj
+++ b/Car Parts/Car Parts.Tests/Car Parts.Tests.csproj
@@ -27,4 +27,10 @@
     <ProjectReference Include="..\Car Parts\Car Parts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="testsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
